# abstract-algebra

./: LICENSE  README.md  abstract-algebra.cabal
app/: Main.hs
src/: Group.hs  Tree.hs
src/Group/: Cayley.hs  Cyclic.hs  Group.hs  Symmetric.hs
