name:                abstract-algebra
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dgsaf/abstract-algebra#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Ross
maintainer:          tom.ross@protonmail.com
copyright:           2017 Tom Ross
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/Group
  exposed-modules:     Group
                     , Cyclic
                     , Symmetric
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim >= 0.5.0.0
                     , containers >= 0.5.7.1
  default-language:    Haskell2010

executable abstract-algebra-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , abstract-algebra
                     , containers >= 0.5.7.1
                     , diagrams >= 1.4
  default-language:    Haskell2010

test-suite abstract-algebra-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , abstract-algebra
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dgsaf/abstract-algebra
